<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/appearance_menu">
        <ListPreference
            app:entries="@array/entries"
            app:entryValues="@array/entry_values"
            app:title="@string/night_mode"
            app:defaultValue="system"
            app:useSimpleSummaryProvider="true"
            app:key="dark_mode"/>
        <SwitchPreferenceCompat
            app:title="@string/monet_using"
            app:key="dynamic_color"
            app:useSimpleSummaryProvider="true"
            app:summaryOn="@string/monet_using_summary"
            app:summaryOff="@string/monet_using_summary"
            app:isPreferenceVisible="false"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/about_menu">
        <Preference
            app:title="@string/terms_of_service"
            app:key="terms_of_service"/>
        <Preference
            app:title="@string/privacy_policy"
            app:key="privacy_policy"/>

    </PreferenceCategory>

</PreferenceScreen>