<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".flashcards.ViewFlashcard">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="-50dp"
        android:background="@color/app_shadow"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/flashcard_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/flashcard_viewer"
        android:textColor="#DC7575"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Flashcard_text"
        android:layout_width="0dp"
        android:layout_height="340dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:background="#A3FFF5F1"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#8A5424"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Flashcard_title" />

    <TextView
        android:id="@+id/tv_Flashcard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="monospace"
        android:text="TextView"
        android:textColor="@color/app_shadow2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_shuffle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Flashcard_text"
        app:srcCompat="@drawable/shuffle"
        app:tint="@color/app_shadow2"
        android:contentDescription="@string/shuffle_cards" />

    <ImageView
        android:id="@+id/icon_order"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Flashcard_text"
        app:srcCompat="@drawable/order"
        app:tint="@color/app_shadow2"
        android:contentDescription="@string/cards_in_order" />

    <TextView
        android:id="@+id/ordercards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/cards_in_order"
        android:textColor="@color/app_shadow2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_order" />

    <TextView
        android:id="@+id/shufflecards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/shuffle_cards"
        android:textColor="@color/app_shadow2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_shuffle" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Flashcard_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_Flashcard_text"
        app:srcCompat="@drawable/arrow"
        app:tint="@color/app_shadow2"
        android:contentDescription="@string/previous_flashcard" />

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="90dp"
        android:rotationY="180"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Flashcard_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_Flashcard_text"
        app:srcCompat="@drawable/arrow"
        app:tint="@color/app_shadow2"
        android:contentDescription="@string/next_flashcard" />


</androidx.constraintlayout.widget.ConstraintLayout>